k8s/front-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
  labels:
    component: front-end
spec:
  replicas: 3
  selector:
    matchLabels:
      component: front-end
  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
        - name: front-end
          image: michiko/front:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    component: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
